[gd_scene load_steps=10 format=3 uid="uid://xrm4qfagn7br"]

[ext_resource type="Script" path="res://scripts/snow_to_desert.gd" id="1_8v71e"]
[ext_resource type="TileSet" uid="uid://dyrq7h5i02yyh" path="res://scenes/grass_snow_tileset.tres" id="2_jk0t4"]
[ext_resource type="PackedScene" uid="uid://c8x0rcllec7w5" path="res://scenes/canvas_modulate.tscn" id="3_c11mk"]
[ext_resource type="PackedScene" uid="uid://b4mitotcubsj0" path="res://scenes/daynightcycle_ui.tscn" id="4_vnuhe"]
[ext_resource type="PackedScene" uid="uid://dt5avhnd2ms2x" path="res://inventory/hotbar.tscn" id="5_e10f1"]
[ext_resource type="PackedScene" uid="uid://digw6jgcbqt8l" path="res://scenes/player.tscn" id="6_0w157"]
[ext_resource type="PackedScene" uid="uid://b0xxs5xfedjw4" path="res://scenes/nightborne.tscn" id="7_hgkoh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xir27"]
size = Vector2(48, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ui7n"]
size = Vector2(37.5, 34)

[node name="snow_to_dessert" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_8v71e")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = ExtResource("2_jk0t4")
format = 2
layer_0/name = "general terrain"
layer_0/tile_data = PackedInt32Array(11, 1769475, 34, 12, 1769475, 34, 13, 1769475, 34, 14, 1769475, 34, 15, 1769475, 34, 16, 1769475, 34, 17, 1769475, 34, 18, 1769475, 34, 19, 1769475, 34, 20, 1769475, 34, 21, 1769475, 34, 22, 1769475, 34, 23, 1769475, 34, 24, 1769475, 34, 25, 1769475, 34, 26, 1769475, 34, 27, 1769475, 34, 28, 1769475, 34, 29, 1769475, 34, 655360, 262145, 4, 786432, 65537, 4, 851968, 65537, 4, 917504, 65537, 4, 983040, 65537, 4, 1048576, 65537, 4, 1048577, 65537, 4, 1048578, 65537, 4, 1048579, 65537, 4, 1114112, 65537, 4, 1114113, 65537, 4, 1114114, 65537, 4, 1114115, 65537, 4, 1114116, 65537, 4, 1114117, 65537, 4, 1114118, 65537, 4, 1114119, 65537, 4, 1114120, 65537, 4, 1114121, 1769475, 34, 1114122, 1769475, 34, 1114123, 1769475, 34, 1114124, 1769475, 34, 1114125, 1769475, 34, 1048580, 65537, 4, 1048581, 65537, 4, 1048582, 65537, 4, 1048583, 65537, 4, 1048584, 65537, 4, 1048585, 1769475, 34, 1048586, 1769475, 34, 1048587, 1769475, 34, 1048588, 3407875, 37, 1048589, 1769475, 34, 65547, 655361, 6, 131082, 65537, 4, 131083, 1769475, 34, 196617, 1, 4, 196618, 1, 4, 196619, 1769475, 34, 262155, 1769475, 34, 262154, 1, 4, 589832, 65537, 4, 655371, 1376257, 7, 655370, 1376257, 7, 655369, 1376257, 7, 655368, 1376257, 7, 655367, 1376257, 7, 655366, 1376257, 7, 655365, 1376257, 7, 720901, 1376257, 7, 720902, 1376257, 7, 786439, 65537, 4, 786440, 65537, 4, 786441, 1769475, 34, 786442, 1769475, 34, 720906, 1376257, 7, 720907, 1376257, 7, 720905, 1376257, 7, 720904, 1376257, 7, 720903, 1376257, 7, 786438, 65537, 4, 786437, 65537, 4, 786436, 65537, 4, 786435, 65537, 4, 786434, 65537, 4, 786433, 65537, 4, 851969, 65537, 4, 917505, 65537, 4, 983041, 65537, 4, 983042, 65537, 4, 917506, 65537, 4, 851970, 65537, 4, 983043, 65537, 4, 917507, 65537, 4, 917508, 65537, 4, 851971, 65537, 4, 851972, 65537, 4, 851973, 655361, 6, 851974, 65537, 4, 851975, 65537, 4, 851976, 65537, 4, 851977, 1769475, 34, 851978, 1769475, 34, 786443, 1769475, 34, 851979, 1769475, 34, 917511, 65537, 4, 917510, 65537, 4, 917509, 65537, 4, 983045, 65537, 4, 983044, 65537, 4, 983046, 65537, 4, 983047, 65537, 4, 983048, 65537, 4, 917512, 65537, 4, 917513, 1769475, 34, 917514, 1769475, 34, 983050, 1769475, 34, 983049, 1769475, 34, 917515, 1769475, 34, 655361, 262145, 4, 655362, 262145, 4, 655363, 262145, 4, 655364, 262145, 4, 720896, 262145, 4, 720897, 262145, 4, 720898, 262145, 4, 720899, 262145, 4, 720900, 262145, 4, 720908, 1376257, 7, 655372, 262145, 4, 786445, 262145, 4, 720909, 262145, 4, 720910, 262145, 4, 786446, 262145, 4, 851982, 262145, 4, 786447, 262145, 4, 851983, 262145, 4, 917519, 3407875, 37, 917520, 262145, 4, 851984, 262145, 4, 851985, 262145, 4, 917521, 262145, 4, 851987, 262145, 4, 917522, 262145, 4, 851986, 262145, 4, 917523, 262145, 4, 851988, 262145, 4, 917524, 262145, 4, 786452, 262145, 4, 720917, 262145, 4, 655382, 262145, 4, 589847, 262145, 4, 589848, 262145, 4, 524312, 262145, 4, 458777, 262145, 4, 393242, 262145, 4, 327707, 262145, 4, 917525, 262145, 4, 851989, 262145, 4, 786453, 262145, 4, 851990, 262145, 4, 786454, 262145, 4, 720918, 262145, 4, 655383, 262145, 4, 720919, 262145, 4, 786455, 262145, 4, 655384, 262145, 4, 720920, 262145, 4, 524313, 262145, 4, 589849, 262145, 4, 458778, 262145, 4, 524314, 262145, 4, 393243, 262145, 4, 458779, 1769475, 34, 786444, 1769475, 34, 655373, 1769475, 34, 786449, 1769475, 34, 589846, 1769475, 34, 327706, 1769475, 34, 589850, 1769475, 34, 917526, 1769475, 34, 983059, 1769475, 34, 983051, 1769475, 34, 983052, 1769475, 34, 983053, 1769475, 34, 851980, 1769475, 34, 851981, 1769475, 34, 917517, 1769475, 34, 917516, 1769475, 34, 917518, 1769475, 34, 983054, 1769475, 34, 1048590, 1769475, 34, 1114126, 1769475, 34, 983055, 1769475, 34, 1048591, 1769475, 34, 1114127, 1769475, 34, 65548, 1769475, 34, 131084, 1769475, 34, 196620, 1769475, 34, 262156, 1769475, 34, 327692, 1769475, 34, 393228, 1769475, 34, 458764, 1769475, 34, 524300, 1769475, 34, 589836, 1769475, 34, 589837, 1769475, 34, 589838, 1769475, 34, 655374, 1769475, 34, 524302, 1769475, 34, 524301, 1769475, 34, 458765, 1769475, 34, 262157, 1769475, 34, 196621, 1769475, 34, 131085, 1769475, 34, 65549, 1769475, 34, 327693, 1769475, 34, 393229, 1769475, 34, 393230, 1769475, 34, 458766, 1769475, 34, 327694, 1769475, 34, 262158, 1769475, 34, 196622, 1769475, 34, 131086, 1769475, 34, 65550, 1769475, 34, 65551, 1769475, 34, 65552, 1769475, 34, 65553, 1769475, 34, 65554, 1769475, 34, 65555, 1769475, 34, 65556, 3407875, 37, 65557, 3407875, 37, 65558, 1769475, 34, 65559, 1769475, 34, 65560, 1769475, 34, 65561, 1769475, 34, 65562, 1769475, 34, 65563, 1769475, 34, 131099, 1769475, 34, 196635, 1769475, 34, 262171, 1769475, 34, 262170, 1769475, 34, 196634, 1769475, 34, 131098, 1769475, 34, 131097, 1769475, 34, 131096, 1769475, 34, 131095, 1769475, 34, 131094, 1769475, 34, 131093, 1769475, 34, 131092, 1769475, 34, 131091, 1769475, 34, 131090, 1769475, 34, 131089, 1769475, 34, 131088, 1769475, 34, 131087, 1769475, 34, 196623, 1769475, 34, 262159, 1769475, 34, 262160, 1769475, 34, 262161, 1769475, 34, 262162, 1769475, 34, 196625, 1769475, 34, 196624, 1769475, 34, 196626, 1769475, 34, 196627, 1769475, 34, 196628, 1769475, 34, 196629, 1769475, 34, 196630, 1769475, 34, 196631, 1769475, 34, 196632, 1769475, 34, 196633, 1769475, 34, 262169, 1769475, 34, 262168, 1769475, 34, 262167, 1769475, 34, 262166, 1769475, 34, 262165, 1769475, 34, 262164, 1769475, 34, 262163, 1769475, 34, 327699, 3407875, 37, 327698, 1769475, 34, 327697, 1769475, 34, 327696, 1769475, 34, 327695, 1769475, 34, 393231, 1769475, 34, 393232, 1769475, 34, 393233, 1769475, 34, 393234, 1769475, 34, 393235, 1769475, 34, 393236, 1769475, 34, 327700, 3407875, 37, 327701, 1769475, 34, 327705, 1769475, 34, 327704, 1769475, 34, 327703, 1769475, 34, 327702, 1769475, 34, 393238, 1769475, 34, 393237, 1769475, 34, 393239, 1769475, 34, 393240, 1769475, 34, 393241, 1769475, 34, 458776, 1769475, 34, 458775, 1769475, 34, 458774, 1769475, 34, 458773, 1769475, 34, 458772, 1769475, 34, 458771, 1769475, 34, 458770, 1769475, 34, 458769, 1769475, 34, 458768, 1769475, 34, 458767, 1769475, 34, 524303, 1769475, 34, 524304, 3407875, 37, 524305, 1769475, 34, 524306, 1769475, 34, 524307, 1769475, 34, 524309, 1769475, 34, 524310, 1769475, 34, 524311, 3407875, 37, 589845, 1769475, 34, 655381, 1769475, 34, 655380, 1769475, 34, 720916, 1769475, 34, 589844, 1769475, 34, 589843, 1769475, 34, 589842, 1769475, 34, 589841, 1769475, 34, 589840, 1769475, 34, 589839, 1769475, 34, 655375, 1769475, 34, 655376, 1769475, 34, 655377, 1769475, 34, 655378, 1769475, 34, 655379, 1769475, 34, 720915, 1769475, 34, 786451, 1769475, 34, 786450, 1769475, 34, 720914, 1769475, 34, 720913, 1769475, 34, 720912, 1769475, 34, 720911, 1769475, 34, 786448, 1769475, 34, 983056, 1769475, 34, 983057, 1769475, 34, 983058, 1769475, 34, 1048593, 1769475, 34, 1048592, 1769475, 34, 1048594, 1769475, 34, 1114128, 1769475, 34, 1114129, 1769475, 34, 1114130, 1769475, 34, 1114131, 1769475, 34, 1048595, 1769475, 34, 1048596, 1769475, 34, 983060, 1769475, 34, 983061, 1769475, 34, 983062, 1769475, 34, 1048598, 1769475, 34, 1048597, 1769475, 34, 1114132, 1769475, 34, 1114133, 1769475, 34, 1114134, 1769475, 34, 1114135, 1769475, 34, 1048599, 1769475, 34, 983063, 1769475, 34, 917527, 1769475, 34, 851991, 1769475, 34, 851992, 1769475, 34, 786456, 1769475, 34, 786457, 1769475, 34, 720921, 1769475, 34, 655385, 1769475, 34, 655386, 1769475, 34, 655387, 1769475, 34, 589851, 1769475, 34, 524315, 1769475, 34, 65564, 1769475, 34, 65565, 1769475, 34, 131101, 3407875, 37, 196637, 1769475, 34, 262173, 1769475, 34, 327709, 262145, 4, 393245, 262145, 4, 458781, 1769475, 34, 524317, 1769475, 34, 589853, 1769475, 34, 655389, 1769475, 34, 720925, 1769475, 34, 786461, 1769475, 34, 851997, 1769475, 34, 917533, 1769475, 34, 983069, 1769475, 34, 1048605, 1769475, 34, 1048604, 1769475, 34, 983068, 1769475, 34, 917532, 1769475, 34, 851996, 1769475, 34, 786460, 1769475, 34, 720924, 1769475, 34, 655388, 1769475, 34, 589852, 1769475, 34, 524316, 1769475, 34, 458780, 1769475, 34, 393244, 262145, 4, 327708, 262145, 4, 262172, 1769475, 34, 196636, 1769475, 34, 131100, 1769475, 34, 720922, 1769475, 34, 720923, 1769475, 34, 786458, 1769475, 34, 851993, 1769475, 34, 851994, 1769475, 34, 851995, 1769475, 34, 917531, 1769475, 34, 917530, 1769475, 34, 917529, 1769475, 34, 917528, 1769475, 34, 983064, 1769475, 34, 983065, 3407875, 37, 983066, 1769475, 34, 983067, 1769475, 34, 1048603, 1769475, 34, 1048602, 1769475, 34, 1048601, 1769475, 34, 1048600, 1769475, 34, 1114136, 1769475, 34, 1114137, 1769475, 34, 1114138, 1769475, 34, 1114139, 1769475, 34, 1114140, 1769475, 34, 1114141, 1769475, 34, 720894, 262145, 4, 917502, 65537, 4, 851966, 65537, 4, 786430, 262145, 4, 917503, 65537, 4, 983039, 65537, 4, 851967, 65537, 4, 786431, 262145, 4, 720895, 262145, 4, 983038, 65537, 4, 1048575, 65537, 4, 1114111, 65537, 4, 1179647, 65537, 4, 1179646, 65537, 4, 1048574, 65537, 4, 1114110, 655361, 6, 327710, 262145, 4, 327711, 262145, 4, 393247, 262145, 4, 393246, 262145, 4, 30, 1769475, 34, 31, 1769475, 34, 65566, 1769475, 34, 65567, 1769475, 34, 131103, 1769475, 34, 131102, 1769475, 34, 196638, 1769475, 34, 196639, 1769475, 34, 262175, 1769475, 34, 262174, 1769475, 34, 458782, 1769475, 34, 458783, 1769475, 34, 524318, 1769475, 34, 524319, 1769475, 34, 589854, 1769475, 34, 589855, 1769475, 34, 655391, 1769475, 34, 655390, 1769475, 34, 720926, 1769475, 34, 720927, 1769475, 34, 786462, 3407875, 37, 786459, 1769475, 34, 786463, 1769475, 34, 851999, 1769475, 34, 851998, 1769475, 34, 917534, 1769475, 34, 917535, 1769475, 34, 983071, 1769475, 34, 983070, 1769475, 34, 1048606, 1769475, 34, 1048607, 1769475, 34, 1114143, 1769475, 34, 1114142, 1769475, 34, 65535, 65537, 4, 65534, 65537, 4, 131070, 65537, 4, 0, 65537, 4, 1, 65537, 4, 65537, 65537, 4, 131073, 65537, 4, 131072, 65537, 4, 262143, 65537, 4, 262142, 65537, 4, 327678, 65537, 4, 393214, 65537, 4, 458750, 65537, 4, 524286, 65537, 4, 589822, 65537, 4, 655358, 65537, 4, 655359, 655361, 6, 589823, 65537, 4, 524287, 65537, 4, 458751, 65537, 4, 393215, 65537, 4, 327679, 65537, 4, 262144, 65537, 4, 196608, 65537, 4, 196609, 65537, 4, 262145, 65537, 4, 327681, 65537, 4, 327680, 65537, 4, 393216, 65537, 4, 458752, 65537, 4, 524288, 65537, 4, 589824, 65537, 4, 589825, 65537, 4, 524289, 65537, 4, 458753, 65537, 4, 393217, 65537, 4, 393218, 65537, 4, 327682, 65537, 4, 262146, 65537, 4, 196610, 65537, 4, 131074, 65537, 4, 65538, 65537, 4, 2, 65537, 4, 3, 65537, 4, 65539, 65537, 4, 131075, 65537, 4, 196611, 262145, 7, 262147, 262145, 7, 327683, 262145, 7, 393219, 262145, 7, 458755, 65537, 4, 458754, 655361, 6, 524290, 65537, 4, 589826, 65537, 4, 589827, 65537, 4, 524291, 65537, 4, 524292, 65537, 4, 458756, 65537, 4, 393220, 262145, 7, 393221, 262145, 7, 458757, 65537, 4, 524293, 65537, 4, 589829, 65537, 4, 589828, 65537, 4, 589830, 65537, 4, 524294, 65537, 4, 458758, 65537, 4, 393222, 262145, 7, 327686, 262145, 7, 262150, 262145, 7, 196614, 262145, 7, 131078, 65537, 4, 65542, 65537, 4, 5, 65537, 4, 4, 65537, 4, 65540, 65537, 4, 131076, 65537, 4, 196612, 262145, 7, 196613, 262145, 7, 131077, 65537, 4, 65541, 65537, 4, 7, 65537, 4, 65543, 65537, 4, 131079, 65537, 4, 196615, 65537, 4, 262151, 65537, 4, 327687, 65537, 4, 393223, 65537, 4, 458759, 65537, 4, 524295, 65537, 4, 589831, 65537, 4, 524296, 65537, 4, 458760, 65537, 4, 393224, 65537, 4, 327688, 65537, 4, 262152, 65537, 4, 196616, 65537, 4, 131080, 65537, 4, 65544, 65537, 4, 8, 65537, 4, 9, 65537, 4, 65545, 65537, 4, 131081, 65537, 4, 65546, 65537, 4, 10, 65537, 4, 327689, 65537, 4, 393225, 65537, 4, 458761, 65537, 4, 524297, 65537, 4, 589833, 65537, 4, 589834, 65537, 4, 524298, 65537, 4, 458762, 65537, 4, 393226, 65537, 4, 327690, 65537, 4, 327691, 1769475, 34, 393227, 1769475, 34, 458763, 1769475, 34, 524299, 1769475, 34, 589835, 1769475, 34, 65536, 65537, 4, 196606, 65537, 4, 524308, 1769475, 34, 262148, 262145, 7, 262149, 262145, 7, 327685, 262145, 7, 327684, 262145, 7, 131071, 655361, 6, 196607, 655361, 6, 6, 655361, 6, 262153, 655361, 6)
layer_1/name = "fences"
layer_1/tile_data = PackedInt32Array(262171, 65538, 3, 262172, 131074, 3, 262173, 131074, 3, 262174, 131074, 3, 262175, 196610, 3, 458783, 196610, 3, 458781, 131074, 3, 458780, 131074, 3, 458779, 65538, 3, 458782, 131074, 3, 917519, 2, 0, 983055, 196610, 2, 917515, 2, 1, 983051, 65538, 2, 983052, 131074, 3, 983053, 131074, 3, 983054, 131074, 3, 851979, 65538, 0, 851980, 131074, 3, 851981, 196610, 3, 589828, 196610, 3, 589827, 131074, 3, 589826, 131074, 3, 589825, 131074, 3, 589824, 131074, 3, 655359, 131074, 3, 655358, 65538, 3, 851967, 131074, 3, 786432, 131074, 3, 786433, 131074, 3, 786434, 131074, 3, 786435, 131074, 3, 786436, 196610, 3, 851966, 65538, 3)
layer_2/name = "ysort"
layer_2/y_sort_enabled = true
layer_2/tile_data = PackedInt32Array(917513, 0, 0, 524293, 131072, 2, 393225, 131072, 2, 65545, 262144, 0, 2, 262144, 0, 851971, 262145, 2, 393230, 262144, 0, 131095, 262144, 0, 1048595, 262144, 0, -196597, 65539, 42, -131061, 65539, 43, -65525, 65539, 44, 11, 65539, 45, 65547, 65539, 46, -196596, 131075, 42, -131060, 131075, 43, -65524, 131075, 44, 12, 131075, 45, 65548, 131075, 46, -196595, 196611, 42, -131059, 196611, 43, -65523, 196611, 44, 13, 196611, 45, 65549, 196611, 46, -196594, 262147, 42, -131058, 262147, 43, -65522, 262147, 44, 14, 262147, 45, 65550, 262147, 46, -196593, 327683, 42, -131057, 327683, 43, -65521, 327683, 44, 15, 327683, 45, 65551, 327683, 46, -196592, 393219, 42, -131056, 393219, 43, -65520, 393219, 44, 16, 393219, 45, 65552, 393219, 46, -196591, 65539, 42, -131055, 65539, 43, -65519, 65539, 44, 17, 65539, 45, 65553, 65539, 46, -196590, 131075, 42, -131054, 131075, 43, -65518, 131075, 44, 18, 131075, 45, 65554, 131075, 46, -196589, 196611, 42, -131053, 196611, 43, -65517, 196611, 44, 19, 196611, 45, 65555, 196611, 46, -196588, 262147, 42, -131052, 262147, 43, -65516, 262147, 44, 20, 262147, 45, 65556, 262147, 46, -196587, 327683, 42, -131051, 327683, 43, -65515, 327683, 44, 21, 327683, 45, 65557, 327683, 46, -196586, 393219, 42, -131050, 393219, 43, -65514, 393219, 44, 22, 393219, 45, 65558, 393219, 46, -196585, 458755, 42, -131049, 458755, 43, -65513, 458755, 44, 23, 458755, 45, 65559, 458755, 46, -196584, 524291, 42, -131048, 524291, 43, -65512, 524291, 44, 24, 524291, 45, 65560, 524291, 46, -196583, 589827, 42, -131047, 589827, 43, -65511, 589827, 44, 25, 589827, 45, 65561, 589827, 46, -196582, 655363, 42, -131046, 655363, 43, -65510, 655363, 44, 26, 655363, 45, 65562, 655363, 46, -196581, 720899, 42, -131045, 720899, 43, -65509, 720899, 44, 27, 720899, 45, 65563, 720899, 46, -196580, 786435, 42, -131044, 786435, 43, -65508, 786435, 44, 28, 786435, 45, 65564, 786435, 46, -196579, 851971, 42, -131043, 851971, 43, -65507, 851971, 44, 29, 851971, 45, 65565, 851971, 46, -196578, 917507, 42, -131042, 917507, 43, -65506, 917507, 44, 30, 917507, 45, 65566, 262144, 0, -196577, 983043, 42, -131041, 983043, 43, -65505, 983043, 44, 31, 983043, 45, 65567, 983043, 46, 327702, 262144, 0, 524317, 262144, 0, 589842, 262144, 0, 5, 1, 0, 786438, 1, 0, 327680, 1, 0, 983040, 1, 0, 262162, 0, 0, 786457, 0, 0, 131086, 131072, 2, 262156, 262145, 2, 458770, 262145, 2, 1048602, 262145, 2, 917517, 262145, 2, 262170, 262145, 0, 262148, 393217, 0, 262150, 393217, 0, 131092, 393217, 0, 131098, 393217, 0, 589836, 393217, 0, 983045, 131073, 2, 131083, 131073, 2, 589839, 262144, 0, 786461, 262144, 0, 589851, 131072, 2, 917527, 131072, 2, 327685, 131073, 2, 393223, 262144, 0, 720907, 262144, 0, 524290, 131073, 2, 983057, 262145, 2, 524309, 1, 0, 262159, 393217, 0, 786450, 393217, 0, 524297, 0, 0)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(-2, 1, -1, 159, -45, 159, -45, 191, -1, 190, -1, 289, 481, 288, 479, 110, 516, 110, 515, 77, 480, 80, 480, 31, 178, 32, 176, 2, 4, -1, 145, -15, 231, -12, 336, -15, 469, -12, 511, -1, 534, 47, 537, 111, 529, 196, 525, 283, 517, 313, 401, 321, -15, 300, -86, 186, -40, 111, -14, 38)

[node name="portal to snowmap" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="portal to snowmap"]
position = Vector2(-21, 175.5)
shape = SubResource("RectangleShape2D_xir27")

[node name="CanvasModulate" parent="." instance=ExtResource("3_c11mk")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DayNightCycleUI" parent="CanvasLayer" instance=ExtResource("4_vnuhe")]
anchor_right = 0.039
anchor_bottom = 0.038
offset_right = -0.880005
offset_bottom = -0.0400009
scale = Vector2(2, 2)

[node name="Hotbar" parent="CanvasLayer" instance=ExtResource("5_e10f1")]
offset_left = -5.0
offset_top = 89.0
offset_right = 135.0
offset_bottom = 129.0
scale = Vector2(1.5, 1.5)

[node name="snow_to_dessert to dessertmap" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="snow_to_dessert to dessertmap"]
position = Vector2(497.25, 94)
shape = SubResource("RectangleShape2D_1ui7n")

[node name="player" parent="." instance=ExtResource("6_0w157")]
position = Vector2(22, 179)

[node name="Nightborne" parent="." instance=ExtResource("7_hgkoh")]
position = Vector2(432, 109)

[node name="Nightborne2" parent="." instance=ExtResource("7_hgkoh")]
position = Vector2(242, 182)

[node name="Nightborne3" parent="." instance=ExtResource("7_hgkoh")]
position = Vector2(271, 43)

[node name="Nightborne4" parent="." instance=ExtResource("7_hgkoh")]
position = Vector2(390, 66)

[node name="Nightborne5" parent="." instance=ExtResource("7_hgkoh")]
position = Vector2(375, 175)

[connection signal="body_entered" from="portal to snowmap" to="." method="_on_portal_to_snowmap_body_entered"]
[connection signal="body_entered" from="snow_to_dessert to dessertmap" to="." method="_on_snow_to_dessert_to_dessertmap_body_entered"]
